Fix long words causing text to overflow container

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,17 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.no-break-out {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
